# bigdance

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: generate_upset_analysis.yml  publish.yml  test.yml
app/: README.md  app.py  generate_upset_analysis.py  requirements.txt  tracker.py
app/.cache/: bracket_men_blank.json  bracket_women_blank.json
app/data/men/pool_10/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_100/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_15/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_150/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_20/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_200/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_30/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_5/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_50/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/men/pool_75/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_10/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_15/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_20/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_30/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_5/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/pool_50/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_10/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_100/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_15/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_150/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_20/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_200/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_30/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_5/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_50/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
app/data/women/pool_75/: common_underdogs.csv  comparative_upset_distributions_data.json  log_prob_strategy.csv  optimal_upset_strategy.csv
examples/: data.py  server.py  ui.py
examples/bracket_analysis_10entries_men/: champion_pick_comparison.csv  champion_picks.csv  common_underdogs.csv  comparative_analysis_summary.md  comparative_log_probability_distributions_data.json  comparative_upset_distributions_data.json  first_round_matchups.json  log_probability_comparison_statistics.csv  log_probability_distributions_data.json  log_probability_stats.csv  optimal_upset_strategy.csv  specific_upset_comparison.csv  upset_comparison_statistics.csv  upset_distribution_differences.csv  upset_distributions_data.json  upset_statistics.csv
examples/bracket_analysis_10entries_women/: champion_picks.csv  common_underdogs.csv  log_probability_distributions_data.json  log_probability_stats.csv  upset_distributions_data.json  upset_statistics.csv
examples/bracket_analysis_50entries_men/: champion_pick_comparison.csv  comparative_analysis_summary.md  comparative_log_probability_distributions_data.json  comparative_upset_distributions_data.json  first_round_matchups.json  log_probability_comparison_statistics.csv  optimal_upset_strategy.csv  specific_upset_comparison.csv  upset_comparison_statistics.csv  upset_distribution_differences.csv
src/bigdance/: __init__.py  __main__.py  bigdance_integration.py  bracket_analysis.py  cbb_brackets.py  cli.py  espn_tc_scraper.py  wn_cbb_scraper.py
src/dancing/: __init__.py  __main__.py  bracket-optimizer.py  bracket_analysis.py  cbb_brackets.py  dancing_integration.py  name_corrections.csv  wn_cbb_elo.py  wn_cbb_scraper.py
tests/: test_bigdance_integration.py  test_cbb_brackets.py  test_chalk_advantage.py  test_cli.py  test_dancing_integration.py  test_espn_tc_scraper.py  test_wn_cbb_scraper.py
tfdancing/: __init__.py  cbb_brackets.py  wn_cbb_elo.py
